# lego-opt-data

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  SCOPE.md  SPY_auto_snapshot_1055.pkl  SPY_auto_test_snapshot_1118.pkl  SPY_auto_test_snapshot_1131.pkl  TODO.now.md  TSLA_oi_yesterday_close.csv  aapl_oi_yesterday_close.csv  ask-questions-if-underspecified.skill  liquid_500_sync_snapshot_20251203.csv  pyproject.toml  verify_dashboard_data.py  verify_overwrite.py
.github/: CODEOWNERS
option/opt-data/: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  SCOPE.md  TODO.now.md  pyproject.toml
option/opt-data/.agent/rules/: finance-data-standards.md  ibkr-historical-bars.md  syncing.md  tech-stack.md  ui-guidelines.md
option/opt-data/.agent/workflows/: daily_update.md  development_cycle.md  structure-migration-minimal-downtime.md
option/opt-data/config/: corporate_actions.csv  opt-data.paper-history.toml  opt-data.paper-history.underlyings_202511.toml  opt-data.prod.example.toml  opt-data.prod.toml  opt-data.remote.toml  opt-data.test.compare.toml  opt-data.test.toml  opt-data.toml  universe.intraday.csv  universe_closeday.csv  universe_closeday_bak.csv  universe_history.csv  universe_rerun_hours_err_empty.csv
option/opt-data/docs/: README.md  dual-universe-implementation.md  error-handling-verification-report.md  migration-minimal-downtime.md  ops-runbook.md  ui_optimization_report.md  周末可以先做.md  基于 ib_insync 的 TWS 期权链数据拉取方案（增强版）.md  基于 ib_insync 的TWS 期权链数据拉取正式方案.md
option/opt-data/docs/adr/: ADR-0001-storage.md  ADR-0002-SPY-snapshot-batch-concurrency.md
option/opt-data/docs/architecture/: data-contract.md  dual-universe-implementation.md
option/opt-data/docs/changelog/: 2025-10-07.md  2025-12-13.md
option/opt-data/docs/dev/: README.md  Weekend History Backfill workthrough.md  error_handling_robustness_fixes.md  ops-notes.md  ops-runbook-dev.md  qa.md  retry_and_logging_implementation.md  roadmap.md
option/opt-data/docs/ops/: migration-minimal-downtime.md  ops-runbook.md  project-summary.md  troubleshooting.md
option/opt-data/scripts/: debug_parquet.py  historical_probe_full.py  historical_probe_quarterly_duration_ladder.py  historical_probe_quarterly_universe_stage.py  ib_api_healthcheck.py  ib_connect_smoke.py  make_probe_rerun_universe.py  mcp_smoke_test.py  run_weekend_backfill.sh  stk_iv_history_probe.py  stk_iv_tick106_probe.py  test_error_row_downstream.py  test_oi_enrichment.sh  verify_dashboard_data.py  verify_et_time.py  verify_overwrite.py  weekend_history_backfill.py
option/opt-data/scripts/launchd/: opt-data-daily.sh  opt-data-streaming.sh
option/opt-data/scripts/ops/: check_prod_schedule.sh  check_prod_schedule_remote.sh  streaming-manual.sh  streaming_duration.py  streaming_loop.py
option/opt-data/src/opt_data/: __init__.py  catalog.py  cli.py  config.py
option/opt-data/tests/: __init__.py  helpers.py  test_catalog.py  test_config.py  test_discovery.py  test_expiry.py  test_historical_probe_utils.py  test_mcp_server_integration.py  test_mcp_tools.py  test_schedule_runner.py  test_streaming_selection.py  test_universe.py
stock/stock-data/: AGENTS.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  TODO.now.md  pyproject.toml
stock/stock-data/.agent/rules/: finance-data-standards.md  syncing.md  tech-stack.md  testing-safety.md
stock/stock-data/.agent/workflows/: development_cycle.md
stock/stock-data/config/: corporate_actions.csv  stock-data.remote.toml.example  stock-data.toml  universe.csv
stock/stock-data/docs/: README.md
stock/stock-data/docs/architecture/: data-contract.md
stock/stock-data/docs/ops/: mcp-exposure.md
stock/stock-data/src/stock_data/: cli.py  config.py
stock/stock-data/state/fundamentals_cache/: AAPL_2026-01-04_info.json  MSFT_2026-01-04_info.json  NVDA_2026-01-04_info.json
(+238 files in other folders)
