[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "opt-data"
version = "0.1.0"
description = "Utilities for exploring and transforming options market datasets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Michael Yang"}
]
keywords = ["options", "data", "analysis"]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "numpy>=1.26,<2.0",
  "scipy>=1.11,<1.13",
  "typer>=0.12",
  "ib-insync>=0.9",
  "APScheduler>=3.10",
  "python-dotenv>=1.0",
  "pandas-market-calendars>=4.4; python_version >= '3.10'",
  "tomli>=2.0; python_version < '3.11'",
  "requests>=2.32",
  "pandera>=0.17",
  "streamlit>=1.37"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "anyio>=3.0",
  "ruff>=0.5"
]
mcp = [
  "mcp>=1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/opt_data"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]
norecursedirs = ["data_test", "state_test"]
asyncio_mode = "auto"
markers = [
  "asyncio: async tests (pytest-asyncio)",
  "integration: requires external dependencies",
]
